...
    android:orientation="vertical"
    android:weightSum="8"
    android:padding="5dp"
    android:background="@color/background_blue">

    <TextView
        android:id="@+id/calculatorScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:gravity="center|right"
        android:textColor="#000000"
        android:layout_weight="2"
...
        android:weightSum="5">

        <Button
            android:textColor="@color/text_blue"
            android:backgroundTint="@color/button_blue"
            android:layout_marginRight="5dp"
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="\u2B05"
            android:textSize="40sp"/>
        <Button
...
            android:textSize="20sp" />
        <Button
            android:textColor="@color/text_blue"
            android:backgroundTint="@color/button_blue"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/clear"
            android:tag="Clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="C"
            android:textSize="20sp" />
        <Button
            android:textColor="@color/text_blue"
            android:backgroundTint="@color/button_blue"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/plusMinus"
            android:tag="SignChange"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="\u00B1"
            android:textSize="25sp"/>
        <Button
            android:textColor="@color/text_blue"
            android:backgroundTint="@color/button_blue"
            android:layout_marginLeft="5dp"
            android:id="@+id/squareRoot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="\u221A"
            android:textSize="25sp"/>
    </LinearLayout>
...
        android:orientation="horizontal"
        android:weightSum="5">
        <Button
            android:textColor="@color/text_blue"
            android:backgroundTint="@color/number_button_blue"
            android:layout_marginRight="5dp"
            android:id="@+id/n7"
            android:tag="Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="7"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/n8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/number_button_blue"
...

        <Button
            android:textColor="@color/text_blue"
            android:backgroundTint="@color/number_button_blue"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/n9"
            android:tag="Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="9"
            android:textSize="25sp" />
...
        android:orientation="horizontal"
        android:weightSum="5">
        <Button
            android:textColor="@color/text_blue"
            android:backgroundTint="@color/number_button_blue"
            android:layout_marginRight="5dp"
            android:id="@+id/n4"
            android:tag="Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="4"
            android:textSize="25sp"/>
        <Button
            android:textColor="@color/text_blue"
            android:backgroundTint="@color/number_button_blue"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/n5"
            android:tag="Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="5"
            android:textSize="25sp" />
        <Button
            android:textColor="@color/text_blue"
            android:backgroundTint="@color/number_button_blue"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/n6"
            android:tag="Number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="6"
            android:textSize="25sp" />
...
                    >

                    <Button
                        android:textColor="@color/text_blue"
                        android:backgroundTint="@color/number_button_blue"
                        android:layout_marginRight="5dp"
                        android:id="@+id/n3"
                        android:tag="Number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="3"
                        android:textSize="25sp"/>

                    <Button
                        android:textColor="@color/text_blue"
                        android:backgroundTint="@color/number_button_blue"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/n2"
                        android:tag="Number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="2"
                        android:textSize="25sp" />
...
